--- a/Futuristic/Cards/Card 2/Card.css
+++ b/Futuristic/Cards/Card 2/Card.css
@@ -51,8 +51,9 @@ body {
 
 .card-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 8px;
     cursor: pointer;
     position: relative;
 }
